Lagt inn skalerbar navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,2 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");body{font-size:16px;font-family:"Roboto", sans-serif;color:#000}main{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.cursive{font-family:"Roboto", cursive;font-weight:700;text-transform:uppercase}.prose img{margin-left:auto;margin-right:auto;border-radius:5px}.home-name{font-size:150px}footer{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.navbar{height:80px;width:100%;color:#000;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:0 2rem;font-size:1.2rem}.nav-logo{text-decoration:none;color:#000}.nav-links{display:-ms-grid;display:grid;-ms-grid-columns:(auto)[4];grid-template-columns:repeat(4, auto);grid-gap:20px;list-style:none}.nav-link{text-decoration:none;color:#000;-webkit-transition:0.3s all;-o-transition:0.3s all;transition:0.3s all}.nav-link:hover{-webkit-box-shadow:0px 2px 0px 0px #000;box-shadow:0px 2px 0px 0px #000}.nav-icon{display:none;font-size:2rem;cursor:pointer}@media only screen and (max-width: 500px){.navbar{position:relative}.nav-links{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;position:absolute;text-align:center;width:100%;top:80px;left:-100%;-webkit-transition:0.5s all;-o-transition:0.5s all;transition:0.5s all}.nav-links.active{left:0}.nav-item{padding:10px 0}.nav-icon{display:-webkit-box;display:-ms-flexbox;display:flex}}@import-normalize
+/*# sourceMappingURL=App.css.map */
