Lagt inn todoliste i projects

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
 @import "./assets/styles/General/_base";
+@import "./assets/styles/Projects/_todo";
 @import "./assets/styles/Components/Navbar/_NavBar";
 @import-normalize; /* bring in normalize.css styles */
